crates/analyzer/tests/snapshots/errors__call_balance_with_generic_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `balance` function does not expect generic arguments
  ┌─ [snippet]:3:10
  │
3 │   balance<10>()
  │          ^^^^ unexpected generic argument list


